tests/error/protocol_errors_py312/no_impl.err
Error: Missing protocol implementation (at $FILE:7:15)
  | 
5 | class Proto[T]:
6 |     @guppy.require
7 |     def foo[T](t: T) -> T: ...
  |                ^^^^ Type `T` does not implement protocol `Proto`

Guppy compilation failed due to 1 previous error
